package org.aspect.graphics.bindable;

public abstract class Bindable {

    public Bindable() {

    }

    public abstract void bind();

    public abstract void unbind();

    public abstract void dispose();

}
