package org.strobe.gfx;


public interface Renderable {

    void render(Graphics gfx);

}
